# stfg

./: Cargo.toml  LICENSE  README.md
src/: db.rs  error.rs  from_git.rs  lib.rs  main.rs  record.rs  table.rs  to_git.rs  util.rs  value.rs  view.rs
src/value/: tests.rs
test/: autoincrement-create.sql  autoincrement-delete.sql  autoincrement-insert.sql  char-create.sql  char-delete.sql  char-insert.sql  empty-delete.sql  empty-insert.sql  test.py  timestamp-create.sql  timestamp-insert.sql  trigger-create.sql  trigger-delete.sql  trigger-insert.sql  vibe-create.sql  view-create.sql  view-insert.sql  vtable-create.sql  vtable-delete.sql  vtable-insert.sql
