[package]
name = "stfg"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "a tool that converts sqlite to/from git-friendly format"
repository = "https://github.com/baehyunsol/stfg"
documentation = "https://docs.rs/stfg"

[dependencies]
base64 = "0.22.1"
ragit-cli = "0.4.2"
ragit-fs = "0.4.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
